fix font size changes on smaller screens

--- a/style.css
+++ b/style.css
@@ -157,10 +157,10 @@ label {
         font-size: 1.25em;
     }
     h1 {
-        font-size: 1.3em;
+        font-size: 2.25em;
     }
     #p_0subtitle {
-        font-size: 1em;
+        font-size: 1.1rem;
         text-align: center;
     }
     .title {
